# WithEdge

./: CMakeLists.txt
 Documents/: Руководство программиста.docx
include/: algorithms.hpp  base.hpp  bool_operations.hpp  converters.hpp  core_functions.hpp  drc_functions.hpp  edge_measurement.hpp  execution_state.hpp  file_reader.hpp  filters.hpp  gds_manager.hpp  helpers.hpp  intersection.hpp  intersection_sweep_line.hpp  labels.hpp  logger.hpp  lua_runner.hpp  objects.hpp  params.hpp  rbtree.hpp  sql_manager.hpp  types.hpp
include/glog/: logging.h
include/internal/: cross_res.hpp  density.hpp  event.hpp  print_big_number.hpp  timer.hpp  utils.hpp
include/internal/intersect/: intersect.hpp
include/internal/n2/: algo_n2.hpp
include/internal/sweep_line/: algo_sweep_line.hpp
lib/Debug/cmake/synthesis/: synthesisTargets-debug.cmake  synthesisTargets.cmake
lib/Release/cmake/synthesis/: synthesisConfig.cmake  synthesisTargets-release.cmake
src/: glog_stub.cpp  main.cpp  with_edge.cpp
